syntax = "proto3";

package bcbpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/bcbpb";

import "mir/codegen_extensions.proto";

// ============================================================
// Messages
// ============================================================

message Event {
  option (mir.event) = true;

  oneof type {
    option (mir.event_type) = true;

    BroadcastRequest request = 1;
    Deliver          deliver = 2;
  }
}

message BroadcastRequest {
  option (mir.event) = true;

  bytes data = 1;
}

message Deliver {
  option (mir.event) = true;

  bytes data = 1;
}

message Message {
  option (mir.struct) = true;

  oneof type {
    StartMessage start_message = 1;
    EchoMessage  echo_message  = 2;
    FinalMessage final_message = 3;
  }
}

message StartMessage {
  option (mir.struct) = true;

  bytes data = 1;
}

message EchoMessage {
  option (mir.struct) = true;

  bytes signature = 1;
}

message FinalMessage {
  option (mir.struct) = true;

  bytes data = 1;
  repeated string signers = 2;
  repeated bytes signatures = 3;
}
